[gd_scene load_steps=4 format=3 uid="uid://d2jhlmds62w6o"]

[ext_resource type="Script" path="res://man.gd" id="1_mhovd"]
[ext_resource type="Texture2D" uid="uid://bkfvsro1e7cjs" path="res://assets/man_1.png" id="2_spp46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h42ma"]

[node name="man" type="CharacterBody2D"]
z_index = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_mhovd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h42ma")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 14)
scale = Vector2(0.160156, 0.160156)
texture = ExtResource("2_spp46")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 15
avoidance_enabled = true
debug_enabled = true

[node name="RecalculateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Navigation" type="Node2D" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
flat = true

[connection signal="timeout" from="RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
